--- a/map/index.html
+++ b/map/index.html
@@ -1,143 +1,281 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8" />
     <title>DisasterScout Map</title>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
     <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        }
+
+        #controls {
+            padding: 8px 12px;
+            background: #111827;
+            color: #e5e7eb;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 8px;
+        }
+
+        #controls select,
+        #controls input,
+        #controls button {
+            font-size: 14px;
+            padding: 4px 8px;
+            border-radius: 4px;
+            border: 1px solid #4b5563;
+            background: #111827;
+            color: #e5e7eb;
+        }
+
+        #controls button {
+            cursor: pointer;
+            border-color: #2563eb;
+        }
+
         #map {
-            height: 100vh;
             width: 100%;
+            height: calc(100% - 52px);
         }
 
         .legend {
             background: white;
-            padding: 8px;
+            padding: 6px 8px;
+            font-size: 12px;
+            line-height: 18px;
+            color: #111827;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 4px;
+        }
+
+        .legend div {
+            margin-bottom: 4px;
         }
     </style>
 </head>
 
 <body>
+    <div id="controls">
+        <span><strong>DisasterScout</strong></span>
 
-    <div id="controls" style="padding:8px; background:#fff; position:absolute; z-index:1000;">
         <label>
             Region:
-            <input id="region-input" type="text" value="Brooklyn, NY" style="width:220px;">
+            <select id="regionSelect">
+                <option value="Brooklyn, NY">Brooklyn, NY (flood)</option>
+                <option value="Bay Ridge, Brooklyn, NY">Bay Ridge, Brooklyn (flood)</option>
+                <option value="Qui Nhon, Vietnam">Qui Nhon, Vietnam (flood)</option>
+                <option value="Binh Dinh Province, Vietnam">Binh Dinh Province, Vietnam (flood)</option>
+            </select>
         </label>
-        <button id="region-go">Go</button>
-    </div>
 
+        <button id="loadRegionBtn">Load region</button>
+
+        <span>|</span>
+
+        <label>
+            Near me radius (km):
+            <input id="radiusInput" type="number" value="20" min="1" max="200" step="1" />
+        </label>
+        <button id="nearMeBtn">Use my location</button>
+
+        <span id="status" style="font-size: 12px; opacity: 0.8;"></span>
+    </div>
 
     <div id="map"></div>
 
-    <script>
-        const map = L.map('map').setView([40.6526, -73.9497], 11);
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19
+    <script>
+        // --- Base map setup ---
+        const map = L.map("map").setView([40.6526, -73.9497], 11); // Brooklyn default
+
+        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+            maxZoom: 19,
+            attribution: "&copy; OpenStreetMap contributors",
         }).addTo(map);
 
-        let incidentsLayer = null;
+        // Layer group so we can clear markers when switching region / near-me
+        const incidentLayer = L.layerGroup().addTo(map);
 
         function jitterCoord(value, magnitude) {
+            // small random offset so overlapping markers separate visually
             return value + (Math.random() - 0.5) * magnitude;
         }
 
-        function categoryColor(c) {
-            if (c === "SOS") return "red";
-            if (c === "SHELTER") return "green";
-            return "blue";
+        function categoryColor(category) {
+            switch (category) {
+                case "SOS":
+                    return "red";
+                case "SHELTER":
+                    return "green";
+                case "INFO":
+                default:
+                    return "blue";
+            }
         }
 
-        function addIncidents(features) {
-            // Remove old layer if exists
-            if (incidentsLayer) {
-                map.removeLayer(incidentsLayer);
+        function renderIncidents(featureCollection, options = {}) {
+            incidentLayer.clearLayers();
+
+            const { fitBounds = true } = options;
+            const features = featureCollection.features || [];
+            if (features.length === 0) {
+                document.getElementById("status").textContent = "No incidents found.";
+                return;
             }
 
-            incidentsLayer = L.geoJSON(
-                { type: "FeatureCollection", features },
-                {
-                    pointToLayer: function (feature, latlng) {
-                        const cat = feature.properties.category || "INFO";
-                        const color = categoryColor(cat);
+            const geoLayer = L.geoJSON(featureCollection, {
+                pointToLayer: function (feature, latlng) {
+                    const cat = feature.properties.category || "INFO";
+                    const color = categoryColor(cat);
 
-                        const jittered = L.latLng(
-                            jitterCoord(latlng.lat, 0.001),
-                            jitterCoord(latlng.lng, 0.001)
-                        );
+                    // Jitter slightly so stacked points are visible
+                    const jittered = L.latLng(
+                        jitterCoord(latlng.lat, 0.001), // ~100m
+                        jitterCoord(latlng.lng, 0.001)
+                    );
 
-                        return L.circleMarker(jittered, {
-                            radius: 8,
-                            color: color,
-                            fillColor: color,
-                            fillOpacity: 0.8
-                        });
-                    },
-                    onEachFeature: function (feature, layer) {
-                        const p = feature.properties;
-                        const links = (p.source_links || [])
-                            .map(u => `<a href="${u}" target="_blank">source</a>`)
-                            .join(" | ");
+                    return L.circleMarker(jittered, {
+                        radius: 8,
+                        color: color,
+                        fillColor: color,
+                        fillOpacity: 0.8,
+                    });
+                },
+                onEachFeature: function (feature, layer) {
+                    const p = feature.properties || {};
+                    const linksHtml = (p.source_links || [])
+                        .map((u) => `<a href="${u}" target="_blank">source</a>`)
+                        .join(" | ");
 
-                        layer.bindPopup(`
-          <strong>${p.category}</strong><br/>
-          ${p.description}<br/>
-          <small>${p.region}</small><br/>
-          Reports: ${p.report_count}<br/>
-          ${links}
-        `);
-                    }
+                    const distance =
+                        typeof p.distance_m === "number"
+                            ? `<small>Distance: ${(p.distance_m / 1000).toFixed(1)} km</small><br/>`
+                            : "";
+
+                    layer.bindPopup(
+                        `
+              <strong>${p.category || "INFO"}</strong><br/>
+              ${p.description || ""}<br/>
+              <small>${p.region || ""}</small><br/>
+              <small>Reports: ${p.report_count || 1}</small><br/>
+              ${distance}
+              ${linksHtml}
+            `
+                    );
+                },
+            });
+
+            geoLayer.addTo(incidentLayer);
+
+            if (fitBounds) {
+                try {
+                    map.fitBounds(geoLayer.getBounds(), { padding: [40, 40] });
+                } catch (e) {
+                    // ignore
                 }
-            ).addTo(map);
+            }
+
+            document.getElementById("status").textContent =
+                `Loaded ${features.length} incident(s).`;
         }
 
+        // --- API helpers ---
+
         async function loadRegion(region) {
-            const res = await fetch(`/api/incidents?region=${encodeURIComponent(region)}`);
+            document.getElementById("status").textContent = `Loading ${region}...`;
+            const url = `/api/incidents?region=${encodeURIComponent(region)}`;
+            const res = await fetch(url);
             if (!res.ok) {
-                console.error("API error", await res.text());
+                document.getElementById("status").textContent = `Error: ${res.status}`;
                 return;
             }
             const data = await res.json();
-            addIncidents(data.features || []);
+            renderIncidents(data, { fitBounds: true });
         }
 
-        // Legend
-        const legend = L.control({ position: 'bottomright' });
+        async function loadNearMe(lat, lon, radiusKm) {
+            document.getElementById("status").textContent =
+                `Loading incidents within ${radiusKm} km of you...`;
+            const params = new URLSearchParams({
+                lat: lat.toString(),
+                lon: lon.toString(),
+                radius_km: radiusKm.toString(),
+            });
+            const url = `/api/incidents_near?${params.toString()}`;
+            const res = await fetch(url);
+            if (!res.ok) {
+                document.getElementById("status").textContent = `Error: ${res.status}`;
+                return;
+            }
+            const data = await res.json();
+            renderIncidents(data, { fitBounds: true });
+        }
+
+        // --- UI wiring ---
+
+        const regionSelect = document.getElementById("regionSelect");
+        const loadRegionBtn = document.getElementById("loadRegionBtn");
+        const nearMeBtn = document.getElementById("nearMeBtn");
+        const radiusInput = document.getElementById("radiusInput");
+
+        loadRegionBtn.addEventListener("click", () => {
+            const region = regionSelect.value;
+            loadRegion(region);
+        });
+
+        nearMeBtn.addEventListener("click", () => {
+            if (!navigator.geolocation) {
+                document.getElementById("status").textContent =
+                    "Geolocation is not supported in this browser.";
+                return;
+            }
+            const radius = parseFloat(radiusInput.value) || 20;
+
+            navigator.geolocation.getCurrentPosition(
+                (pos) => {
+                    const lat = pos.coords.latitude;
+                    const lon = pos.coords.longitude;
+                    loadNearMe(lat, lon, radius);
+                },
+                (err) => {
+                    console.error(err);
+                    document.getElementById("status").textContent =
+                        "Failed to get your location (permission denied?).";
+                }
+            );
+        });
+
+        // Initial load: Brooklyn, NY
+        loadRegion(regionSelect.value);
+
+        // --- Legend ---
+        const legend = L.control({ position: "bottomright" });
         legend.onAdd = function () {
-            const div = L.DomUtil.create('div', 'legend');
-            div.style.background = 'white';
-            div.style.padding = '8px';
+            const div = L.DomUtil.create("div", "legend");
             div.innerHTML = `
-    <div><span style="display:inline-block;width:12px;height:12px;background:red;border-radius:50%;margin-right:5px;"></span> SOS</div>
-    <div><span style="display:inline-block;width:12px;height:12px;background:green;border-radius:50%;margin-right:5px;"></span> Shelter</div>
-    <div><span style="display:inline-block;width:12px;height:12px;background:blue;border-radius:50%;margin-right:5px;"></span> Info</div>
-  `;
+        <div><span style="display:inline-block;width:12px;height:12px;background:red;border-radius:50%;margin-right:4px;"></span> SOS</div>
+        <div><span style="display:inline-block;width:12px;height:12px;background:green;border-radius:50%;margin-right:4px;"></span> Shelter</div>
+        <div><span style="display:inline-block;width:12px;height:12px;background:blue;border-radius:50%;margin-right:4px;"></span> Info</div>
+      `;
             return div;
         };
         legend.addTo(map);
-
-        // Wire up controls
-        const params = new URLSearchParams(window.location.search);
-        const initialRegion = params.get("region") || "Brooklyn, NY";
-        document.getElementById("region-input").value = initialRegion;
-        loadRegion(initialRegion);
-
-        document.getElementById("region-go").addEventListener("click", () => {
-            const region = document.getElementById("region-input").value.trim();
-            if (!region) return;
-            // also update URL so you can share the link
-            const newUrl = `${window.location.pathname}?region=${encodeURIComponent(region)}`;
-            window.history.replaceState({}, "", newUrl);
-            loadRegion(region);
-        });
     </script>
-
-
 </body>
 
 </html>
